--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<h1>Qixuan Jiang</h1>
 	<blockquote id="quote"><p>a sophomore from NJUST</p></blockquote>
 	<div id="data">2021-03-24</div>
-	<div id="content"><p>老师让我们在github上搭建个人主页，但是我github两个小时了才打开TAT</p></div>
+	<div id="content"><p>老师让我们在github上搭建个人主页，但是我github两个小时了才打开，淦</p></div>
 	<div id="data">2020-02-27</div>
 	<div id="content"><p>跟着我妈一起去了成都金堂，以后平时就住在金堂了，但其实挺无聊的</p></div>
 	<div id="data">2019-08-27</div>
