--- a/expriment_2/css_id.html
+++ b/expriment_2/css_id.html
@@ -3,40 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Njust</title>
-        <style>
-            #login{
-                padding:30px;
-                margin-left: 220px;
-            }
-            #header {
-                background-color:purple;
-                color:white;
-                text-align:center;
-                padding:5px;
-            }
-            #nav {
-                line-height:30px;
-                background-color:#eeeeee;
-                color: purple;
-                height:430px;
-                width:200px;
-                float:left;
-                padding:5px;	      
-            }
-            #section {
-                width:1000px;
-                float:left;
-                padding:10px;	 	 
-                margin-left: 25px;
-            }
-            #footer {
-                background-color:purple;
-                color:white;
-                clear:both;
-                text-align:center;
-                padding:5px;	 	 
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="mainCss.css">
     </head>
 
     <body>
@@ -46,7 +13,7 @@
         </div>
 
         <div id="header">
-            <h1>NJUST 南京理工大学</h1>
+            <h1>NJUST 南京理工大学（点我）</h1>
         </div>
 
         <script>
