--- a/expriment_2/css_class.html
+++ b/expriment_2/css_class.html
@@ -27,7 +27,7 @@
 	</style>
 </head>
 <body class="bg">
-	<img class="icon" src="img/iconImg.jpeg" alt='icon'>
+	<img class="icon" src="../img/iconImg.jpeg" alt='icon'>
 	<div class="hello">
 		<p>Hello, I'm Jiang Qixuan</p>
 	</div>
