--- a/expriment_2/css_class.html
+++ b/expriment_2/css_class.html
@@ -6,7 +6,7 @@
 	<style type="text/css">
 		.bg
 		{
-			background-image:url(img/bg.jpeg);
+			background-image:url(./img/bg.jpeg);
 			background-size: 100% 100%;
 			background-repeat:no-repeat;
 			background-attachment:fixed;
