--- a/expriment_2/css_id.html
+++ b/expriment_2/css_id.html
@@ -9,7 +9,7 @@
     <body>
 
         <div id="img">
-            <img class="site-logo" src="img/logo.png" width="270" height="70">
+            <img class="site-logo" src="./img/logo.png" width="270" height="70">
         </div>
 
         <div id="header">
