--- a/expriment_2/css_tag.html
+++ b/expriment_2/css_tag.html
@@ -4,7 +4,7 @@
 	<title>tag</title>
 	<style type="text/css">
 		body{
-			background-image: url("img/bg2.jpeg");
+			background-image: url("./img/bg2.jpeg");
 			background-size: 1500px 700px;
 		}
 		p{
